added buttons to home page navigation, created weather, news and about components

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,37 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title> My App </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">My App</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <h2>Welcome to MorningMadeSimple App!</h2>
+
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12" size-md="4">
+          <ion-button expand="full" routerLink="/news" color="primary">
+            News
+          </ion-button>
+        </ion-col>
+        <ion-col size="12" size-md="4">
+          <ion-button expand="full" routerLink="/weather" color="secondary">
+            Weather
+          </ion-button>
+        </ion-col>
+        <ion-col size="12" size-md="4">
+          <ion-button expand="full" routerLink="/about" color="tertiary">
+            About
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 </ion-content>
