--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -33,5 +33,18 @@
         </ion-col>
       </ion-row>
     </ion-grid>
+    <ion-tabs>
+      <ion-tab-bar slot="bottom">
+        <ion-tab-button tab="tab1">
+          <ion-label>Tab 1</ion-label>
+          <ion-icon name="triangle"></ion-icon>
+        </ion-tab-button>
+
+        <ion-tab-button tab="tab2">
+          <ion-label>Tab 2</ion-label>
+          <ion-icon name="ellipse"></ion-icon>
+        </ion-tab-button>
+      </ion-tab-bar>
+    </ion-tabs>
   </div>
 </ion-content>
