--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,3 +1,22 @@
-<p>
-  news works!
-</p>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>News</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-list *ngIf="newsArticles">
+    <ion-item *ngFor="let article of newsArticles">
+      <ion-thumbnail slot="start">
+        <img [src]="article.urlToImage" alt="Article Image" />
+      </ion-thumbnail>
+      <ion-label>
+        <h2>{{ article.title }}</h2>
+        <p>{{ article.description }}</p>
+        <a [href]="article.url" target="_blank">
+          <ion-button fill="clear">Read More</ion-button>
+        </a>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
